--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>Popup</h1>
-        <p>This is a popup.</p>
-    </body>
+<head>
+    <title>Saved URLs</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        #urlList { margin-top: 10px; }
+        .urlItem { margin-bottom: 5px; }
+    </style>
+</head>
+<body>
+    <h1>Saved URLs</h1>
+    <button id="saveUrlButton">Save Current URL</button>
+    <div id="urlList"></div>
+    <script src="popup.js"></script>
+</body>
 </html>
