--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html class="dark-mode">
 <head>
     <title>Saved URLs</title>
     <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1>Saved URLs</h1>
+    <div class="header">
+        <h1>Saved URLs</h1>
+        <button class="darkMode" id="darkModeButton">
+            <i class="fa fa-moon-o" id="darkModeIcon"></i>
+        </button>
+    </div>
     <button class="buttonadddelete" id="saveUrlButton">Save Current URL</button>
     <button class="buttonadddelete" id="deleteAllButton" style="display: none;">Delete All</button>
     <div id="urlList"></div>
