--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,11 +8,11 @@
 <body>
     <div class="header">
         <h1>Saved URLs</h1>
-        <button class="darkMode" id="darkModeButton">
+        <button class="darkmodebutton" id="darkModeButton">
             <i class="fa fa-moon-o" id="darkModeIcon"></i>
         </button>
     </div>
-    <button class="buttonadddelete" id="saveUrlButton">Save Current URL</button>
+    <button class="buttonadddelete" id="saveUrlButton">Save URL</button>
     <button class="buttonadddelete" id="deleteAllButton" style="display: none;">Delete All</button>
     <div id="urlList"></div>
     <script src="popup.js"></script>
